objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Machine Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower_Type__c</fullName>
        <label>Tower Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_DE__c</fullName>
        <formula>CASE (TEXT(Type_EN__c),
&quot;Band-Conveyor&quot;, &quot;Förderband&quot;,
&quot;Blade&quot;, &quot;Flügel&quot;,
&quot;Compressor&quot;, &quot;Kompressor&quot;,
&quot;Control&quot;, &quot;Steuerung&quot;,
&quot;Converter&quot;, &quot;Umrichter&quot;,
&quot;Coupling&quot;, &quot;Kupplung&quot;,
&quot;DrivetrainHSS&quot;, &quot;TriebstrangLSS&quot;,
&quot;DrivetrainLSS&quot;, &quot;TriebstrangHSS&quot;,
&quot;Gearbox&quot;, &quot;Getriebe&quot;,
&quot;Generator&quot;, &quot;Generator&quot;,
&quot;Machine&quot;, &quot;Maschine&quot;,
&quot;Main Bearing&quot;, &quot;Hauptlager&quot;,
&quot;Motor&quot;, &quot;Motor&quot;,
&quot;Nacelle&quot;, &quot;Gondel&quot;,
&quot;Pump&quot;,&quot;Pumpe&quot;,
&quot;Tower&quot;, &quot;Turm&quot;,
&quot;Turbo-Charger&quot;, &quot;Turbo-Charger&quot;,
&quot;Rotor&quot;, &quot;Rotor&quot;,
&quot;&quot;,&quot;&quot;,
&quot;No translation&quot;)</formula>
        <label>Type DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_EN__c</fullName>
        <label>Type EN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Band-Conveyor</fullName>
                </value>
                <value>
                    <fullName>Blade</fullName>
                </value>
                <value>
                    <fullName>Compressor</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Coupling</fullName>
                </value>
                <value>
                    <fullName>DrivetrainHSS</fullName>
                </value>
                <value>
                    <fullName>DrivetrainLSS</fullName>
                </value>
                <value>
                    <fullName>Gearbox</fullName>
                </value>
                <value>
                    <fullName>Generator</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
                <value>
                    <fullName>Main Bearing</fullName>
                </value>
                <value>
                    <fullName>Motor</fullName>
                </value>
                <value>
                    <fullName>Nacelle</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Rotor</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Turbo-Charger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Technical_Parameters__c</fullName>
        <inlineHelpText>Specify parameters of component.</inlineHelpText>
        <label>Technical Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PT - Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type_EN__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Machine_Code__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>